; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/rtsold/extr_cap_sendmsg.c_cap_probe_defrouters.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/rtsold/extr_cap_sendmsg.c_cap_probe_defrouters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifinfo = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cap_probe_defrouters(i32* %0, %struct.ifinfo* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ifinfo*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.ifinfo* %1, %struct.ifinfo** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.ifinfo*, %struct.ifinfo** %4, align 8
  %7 = getelementptr inbounds %struct.ifinfo, %struct.ifinfo* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.ifinfo*, %struct.ifinfo** %4, align 8
  %12 = getelementptr inbounds %struct.ifinfo, %struct.ifinfo* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @probe_defrouters(i32 %10, i32 %13)
  ret i32 %14
}

declare dso_local i32 @probe_defrouters(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
